--- a/index.html
+++ b/index.html
@@ -3,44 +3,103 @@
 <head>
   <meta charset="UTF-8">
   <title>UniFlow</title>
-  <style>
-    body { font-family: system-ui; background:#050509; color:white; margin:0; }
-    .hidden { display:none; }
 
-    /* LOGIN UI */
+  <style>
+    body {
+      font-family: system-ui;
+      background: #050509;
+      color: white;
+      margin: 0;
+    }
+
+    .hidden {
+      display: none !important;
+    }
+
+    /* LOGIN / REGISTER */
     .screen {
-      position:fixed; inset:0;
-      display:flex; align-items:center; justify-content:center;
-      background:#000000aa;
+      position: fixed;
+      inset: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(0,0,0,0.75);
+      z-index: 9999;
     }
+
     .box {
-      background:#111; padding:25px; border-radius:12px; width:320px;
+      background: #111;
+      padding: 25px;
+      border-radius: 12px;
+      width: 320px;
     }
+
     input {
-      width:100%; padding:10px; margin:8px 0;
-      border:none; border-radius:8px; background:#222; color:white;
+      width: 100%;
+      padding: 10px;
+      margin: 8px 0;
+      border: none;
+      border-radius: 8px;
+      background: #222;
+      color: white;
     }
+
     button {
-      width:100%; padding:10px; margin-top:10px;
-      border:none; border-radius:8px; background:#4f46e5; color:white; cursor:pointer;
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      border: none;
+      border-radius: 8px;
+      background: #4f46e5;
+      color: white;
+      cursor: pointer;
     }
-    a { color:#8ab4ff; cursor:pointer; }
+
+    a {
+      color: #8ab4ff;
+      cursor: pointer;
+    }
 
     /* TOAST */
     #toast {
-      position:fixed; bottom:20px; left:50%; transform:translateX(-50%);
-      background:#222; padding:10px 20px; border-radius:20px;
-      opacity:0; transition:.2s;
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #222;
+      padding: 10px 20px;
+      border-radius: 20px;
+      opacity: 0;
+      transition: .2s;
+      z-index: 10000;
     }
-    #toast.visible { opacity:1; }
+
+    #toast.visible {
+      opacity: 1;
+    }
 
     /* APP */
-    #app { padding:20px; }
-    .uf-exam-row { display:flex; gap:10px; margin-bottom:10px; }
-    .uf-exam-row input { flex:1; }
-    .uf-exam-row button { width:40px; background:#e11d48; }
+    #app {
+      padding: 20px;
+    }
+
+    .uf-exam-row {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 10px;
+    }
+
+    .uf-exam-row input {
+      flex: 1;
+    }
+
+    .uf-exam-row button {
+      width: 40px;
+      background: #e11d48;
+    }
   </style>
 </head>
+
 <body>
 
   <!-- LOGIN -->
@@ -50,6 +109,7 @@
       <input id="login-email" type="email" placeholder="Email">
       <input id="login-password" type="password" placeholder="Password">
       <button onclick="login()">Accedi</button>
+
       <p style="text-align:center;margin-top:10px;">
         Non hai un account?
         <a onclick="showRegister()">Registrati</a>
@@ -64,6 +124,7 @@
       <input id="register-email" type="email" placeholder="Email">
       <input id="register-password" type="password" placeholder="Password">
       <button onclick="register()">Registrati</button>
+
       <p style="text-align:center;margin-top:10px;">
         Hai già un account?
         <a onclick="showLogin()">Accedi</a>
