--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>UniFlow – Il tuo flow universitario</title>
-
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +11,7 @@
 
   <style>
     /* LOGIN OVERLAY */
-    .uf-login-overlay {
+    .uf-login-screen {
       position: fixed;
       inset: 0;
       background: rgba(0,0,0,0.85);
@@ -40,17 +39,6 @@
       color: white;
     }
 
-    .uf-login-box button {
-      width: 100%;
-      padding: 12px;
-      margin-top: 10px;
-      border: none;
-      border-radius: 8px;
-      background: #4f46e5;
-      color: white;
-      cursor: pointer;
-    }
-
     .hidden { display: none !important; }
 
     #uf-toast {
@@ -70,41 +58,36 @@
   </style>
 </head>
 
-<body>
+<body class="theme-dark">
 
-  <!-- LOGIN OVERLAY -->
-  <div id="uf-login-screen" class="uf-login-overlay">
+  <!-- LOGIN -->
+  <div id="uf-login-screen" class="uf-login-screen">
     <div class="uf-login-box">
-      <h2>Accedi</h2>
-      <input id="login-email" type="email" placeholder="Email">
-      <input id="login-password" type="password" placeholder="Password">
-      <button onclick="login()">Accedi</button>
-
-      <p style="margin-top:10px;">
+      <h2>Accedi a UniFlow</h2>
+      <input type="email" id="login-email" placeholder="Email">
+      <input type="password" id="login-password" placeholder="Password">
+      <button class="btn-primary" onclick="login()">Accedi</button>
+      <p class="uf-login-switch">
         Non hai un account?
-        <a onclick="showRegister()" style="color:#8ab4ff;cursor:pointer;">Registrati</a>
+        <a href="#" onclick="showRegister()">Registrati</a>
       </p>
     </div>
   </div>
 
-  <!-- REGISTER OVERLAY -->
-  <div id="uf-register-screen" class="uf-login-overlay hidden">
+  <!-- REGISTER -->
+  <div id="uf-register-screen" class="uf-login-screen hidden">
     <div class="uf-login-box">
-      <h2>Registrati</h2>
-      <input id="register-email" type="email" placeholder="Email">
-      <input id="register-password" type="password" placeholder="Password">
-      <button onclick="register()">Registrati</button>
-
-      <p style="margin-top:10px;">
+      <h2>Crea un account</h2>
+      <input type="email" id="register-email" placeholder="Email">
+      <input type="password" id="register-password" placeholder="Password">
+      <button class="btn-primary" onclick="register()">Registrati</button>
+      <p class="uf-login-switch">
         Hai già un account?
-        <a onclick="showLogin()" style="color:#8ab4ff;cursor:pointer;">Accedi</a>
+        <a href="#" onclick="showLogin()">Accedi</a>
       </p>
     </div>
   </div>
 
-  <div id="uf-toast"></div>
-
-  <!-- TUTTO IL TUO SITO ORIGINALE -->
   <!-- HEADER -->
   <header class="uf-header">
     <div class="uf-container uf-header-inner">
@@ -114,10 +97,18 @@
 
       <nav class="uf-nav">
         <a href="#tools">Tool</a>
-        <a href="#media">Calcolatore Media</a>
-        <a href="#tests">Test</a>
+        <a href="#media">Media</a>
+        <a href="#laurea">Laurea</a>
+        <a href="#planner">Obiettivi</a>
         <a href="#premium">Premium</a>
       </nav>
+
+      <div class="uf-header-actions">
+        <button class="btn-mini" onclick="toggleFocus()">Focus</button>
+        <button class="btn-mini" onclick="toggleSidebar()">Stats</button>
+        <button class="btn-mini" onclick="toggleTheme()">Tema</button>
+        <button class="btn-mini" onclick="logout()">Logout</button>
+      </div>
     </div>
   </header>
 
@@ -126,18 +117,25 @@
     <div class="uf-container uf-hero-grid">
       <div class="uf-hero-text">
         <h1>L’università, ma con più flow.</h1>
-        <p>Organizzati meglio, studia più smart e sopravvivi alla sessione con stile, ironia e strumenti virali.</p>
+        <p>Organizzati meglio, studia più smart e sopravvivi alla sessione con stile.</p>
 
         <div class="uf-hero-cta">
           <a href="#tools" class="btn-primary">Scopri i tool</a>
           <a href="#media" class="btn-ghost">Calcola la tua media</a>
         </div>
+
+        <div class="uf-countdown">
+          <span>Sessione estiva tra:</span>
+          <strong id="session-countdown">—</strong>
+        </div>
+
+        <p id="xp-label" class="uf-xp-label">+0 oggi · Inizia a farmare 👀</p>
       </div>
 
       <div class="uf-hero-visual">
         <div class="uf-card uf-card-glow">
-          <h3>XP Sessione</h3>
-          <p>+120 oggi · Continua così 👀</p>
+          <h3>UniFlow Stats</h3>
+          <p>Livello <span id="uf-level">1</span> · XP <span id="uf-xp-total">0</span></p>
         </div>
       </div>
     </div>
@@ -148,33 +146,171 @@
     <div class="uf-container">
       <div class="uf-section-head">
         <h2>Tool UniFlow</h2>
-        <p>Strumenti intelligenti per studenti intelligenti (o quasi).</p>
       </div>
 
       <div class="uf-grid uf-grid-3">
+
         <div class="uf-tool-card">
           <h3>Calcolatore Media</h3>
-          <p>La tua media ponderata in tempo reale.</p>
+          <p>Media ponderata in tempo reale.</p>
           <a href="#media" class="btn-mini">Apri</a>
         </div>
 
         <div class="uf-tool-card">
-          <h3>Piano di Studio</h3>
-          <p>Organizza gli esami in 10 secondi.</p>
-          <button class="btn-mini" disabled>In arrivo</button>
+          <h3>Voto di laurea</h3>
+          <p>Simula il voto finale.</p>
+          <a href="#laurea" class="btn-mini">Apri</a>
         </div>
 
         <div class="uf-tool-card">
-          <h3>Flashcard Automatiche</h3>
-          <p>Studia più veloce con l’AI.</p>
-          <button class="btn-mini" disabled>In arrivo</button>
+          <h3>Obiettivi</h3>
+          <p>Media target e simulazioni.</p>
+          <a href="#planner" class="btn-mini">Apri</a>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- CALCOLATORE MEDIA -->
+  <section id="media" class="uf-section">
+    <div class="uf-container">
+      <div class="uf-section-head">
+        <h2>Calcolatore Media</h2>
+      </div>
+
+      <div class="uf-media-box">
+        <div class="uf-media-topbar">
+          <button class="btn-mini" onclick="toggleSimulation()">Simulazione</button>
+          <button class="btn-mini" onclick="importCSV()">Importa CSV</button>
+          <button class="btn-mini" onclick="exportJSON()">Backup</button>
+          <button class="btn-mini" onclick="downloadPrint()">PDF</button>
+        </div>
+
+        <div id="exam-list" class="uf-exam-list"></div>
+
+        <button class="btn-primary uf-add-exam" onclick="addExam()">+ Aggiungi esame</button>
+
+        <div class="uf-media-actions">
+          <button class="btn-mini" onclick="sortByVoto()">Ordina per voto</button>
+          <button class="btn-mini" onclick="sortByCFU()">Ordina per CFU</button>
+          <button class="btn-mini" onclick="resetAll()">Reset</button>
+        </div>
+
+        <div class="uf-media-result">
+          <h3>Media</h3>
+          <p id="media-value">—</p>
+
+          <h3>Media in 110</h3>
+          <p id="media-110">—</p>
+        </div>
+
+        <div class="uf-media-progress">
+          <h3>Progressione</h3>
+          <div id="media-history" class="uf-media-history"></div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- QUI CONTINUA TUTTO IL TUO SITO ORIGINALE... -->
-  <!-- (non lo tronco, puoi incollare tutto il resto normalmente) -->
+  <!-- LAUREA -->
+  <section id="laurea" class="uf-section">
+    <div class="uf-container">
+      <div class="uf-section-head">
+        <h2>Simulatore Laurea</h2>
+      </div>
+
+      <div class="uf-media-box uf-laurea-box">
+        <div class="uf-laurea-grid">
+          <div>
+            <label>Media in 110</label>
+            <input type="number" id="laurea-media110">
+          </div>
+          <div>
+            <label>Bonus</label>
+            <input type="number" id="laurea-bonus">
+          </div>
+          <div>
+            <label>Tesi</label>
+            <input type="number" id="laurea-tesi">
+          </div>
+          <div>
+            <label>Arrotondamento</label>
+            <select id="laurea-round">
+              <option value="none">Nessuno</option>
+              <option value="floor">Per difetto</option>
+              <option value="ceil">Per eccesso</option>
+              <option value="nearest">Vicino</option>
+            </select>
+          </div>
+        </div>
+
+        <button class="btn-primary" onclick="calculateLaurea()">Calcola</button>
+
+        <div class="uf-media-result">
+          <h3>Voto stimato</h3>
+          <p id="laurea-result">—</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- PLANNER -->
+  <section id="planner" class="uf-section">
+    <div class="uf-container">
+      <div class="uf-section-head">
+        <h2>Obiettivi & Simulazioni</h2>
+      </div>
+
+      <div class="uf-media-box uf-planner-box">
+        <div class="uf-laurea-grid">
+          <div>
+            <label>Media attuale (110)</label>
+            <input type="number" id="planner-current110">
+          </div>
+          <div>
+            <label>CFU fatti</label>
+            <input type="number" id="planner-cfu-done">
+          </div>
+          <div>
+            <label>CFU mancanti</label>
+            <input type="number" id="planner-cfu-left">
+          </div>
+          <div>
+            <label>Obiettivo (110)</label>
+            <input type="number" id="planner-target110">
+          </div>
+        </div>
+
+        <button class="btn-primary" onclick="calculateTarget()">Calcola</button>
+
+        <div class="uf-media-result">
+          <h3>Media necessaria</h3>
+          <p id="planner-result">—</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- SIDEBAR -->
+  <div id="uf-sidebar" class="uf-sidebar">
+    <div class="uf-sidebar-inner">
+      <h3>Statistiche</h3>
+      <p>Livello: <span id="uf-side-level">1</span></p>
+      <p>XP: <span id="uf-side-xp">0</span></p>
+      <p>Media: <span id="uf-side-media">—</span></p>
+      <p>Media 110: <span id="uf-side-media110">—</span></p>
+      <p>Esami: <span id="uf-side-exams">0</span></p>
+
+      <h4>Obiettivi</h4>
+      <ul id="uf-goals"></ul>
+
+      <button class="btn-mini" onclick="toggleSidebar()">Chiudi</button>
+    </div>
+  </div>
+
+  <!-- TOAST -->
+  <div id="uf-toast" class="uf-toast"></div>
 
   <script>
     function toast(msg) {
@@ -225,7 +361,12 @@
       document.getElementById("uf-login-screen").classList.add("hidden");
       document.getElementById("uf-register-screen").classList.add("hidden");
     }
+
+    function logout() {
+      showLogin();
+    }
   </script>
 
+  <script src="script.js"></script>
 </body>
 </html>
